2009-12-21  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/dcpi1_bdiv_q.c: Remove a spurious mpn_sub_1.

	* mpn/generic/mul.c: Put back call to mpn_mul_n.

	* tune/tuneup.c (all): Call tune_mulmod_bnm1 before tuning fft due to
	dependency on mulmod_bnm1 from both mul_fft_mul and from mullo_n.

	* mpn/generic/dcpi1_divappr_q.c: Add parameter ASSERTs.
	* mpn/generic/dcpi1_div_q.c: Likewise.
	* mpn/generic/dcpi1_div_qr.c: Change ASSERT to enforce dn >= 4.

	* mpn/generic/bdiv_q_1.c (mpn_pi1_bdiv_q_1): Renamed from
	mpn_bdiv_q_1_pi1.
	* All references changed.

	* configure.in: Add --enable-old-fft-full.
	* tune/speed.c (routine): Conditionalise mpn_mul_fft_full references on
	WANT_OLD_FFT_FULL.
	* tune/common.c (speed_mpn_mul_fft_full)
	(speed_mpn_mul_fft_full_sqr): Likewise.
	* mpn/generic/mul_fft.c (mpn_mul_fft_full): Include iff
	WANT_OLD_FFT_FULL.

2009-12-21  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* gmp-impl.h (mpn_toom6h_mul_itch): New inline function.
	(MUL_TOOM6H_THRESHOLD): Default value.
	(SQR_TOOM6_THRESHOLD): Default value.
	* mpn/generic/toom6h_mul.c: Remove definitions moved to gmp-impl.h.
	* tune/common.c, tune/speed.c, tune/speed.h: Support for measuring
	mpn_toom6h_mul and mpn_toom6_sqr speed.

	* mpn/generic/toom63_mul.c: Remove unused TMP_*.

	* mpn/generic/toom_eval_pm2rexp.c: New file.
	* gmp-impl.h: Provide corresponding declaration.
	* configure.in (gmp_mpn_functions): List toom_eval_pm2rexp.
	* mpn/generic/toom6h_mul.c: Use shared toom_eval_pm2rexp.

	* mpn/generic/toom_couple_handling.c: New file, helper function
	for high degree Toom.
	* gmp-impl.h: Provide corresponding declaration.
	* configure.in (gmp_mpn_functions): List toom_couple_handling.
	* mpn/generic/toom6h_mul.c: Use shared toom_couple_handling.
	* mpn/generic/toom63_mul.c: Likewise.

	* mpn/generic/toom6h_mul.c: New file.
	* mpn/generic/toom_interpolate_12pts.c: New file.
	* gmp-impl.h: Provide corresponding declarations.